--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -6,7 +6,7 @@ h1 {
 .input {
   background: whitesmoke;
   color: var(--rockgrey);
-  border-color: var(--rockgrey);
+  border-color: var(--ashgrey);
   width: 50%;
 }
 
