Login and register

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 
 :root {
   --rockgrey: #201a1a;
-  --ashwhite: #cccdcf;
+  --ashwhite: #dbdce1;
+  --ashmedwhite: #cccdcf;
   --ashgrey: #717073;
   --lavared: #8b3327;
   --lavaorange: #ce8642;
