--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -93,6 +93,10 @@ h1 {
   font-weight: 300;
   color: var(--ashgrey);
 }
+
+.home-page {
+  background-color: var(--ashmedwhite);
+}
   
   @media (max-width: 700px) {
     .features_box-wrapper {
