--- a/src/constant/constant.css
+++ b/src/constant/constant.css
@@ -28,12 +28,14 @@ nav ul li {
 }
 
 nav ul {
+  display: inline-block;
+  width: 80%;
   list-style: none;
   margin: 0;
 }
 
 nav {
-  width: 50%;
+  width: 100%;
   display: inline-block;
   text-align: right;
 }
@@ -45,7 +47,8 @@ nav ul li a:hover {
       
 #icon {
 display: inline-block;
-width: 49%;
+width: 20%;
+text-align: left;
 }
 
 #icon img {
@@ -53,4 +56,19 @@ width: 49%;
   border-radius: 3px;
   margin-right: 8px;
   vertical-align: middle;
+}
+
+#login {
+  width: 40%;
+  text-align: left;
+  white-space: nowrap;
+}
+
+#login p{
+  margin-left: 20px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 2px solid var(--ashgrey);
+  border-radius: 5px;
+  background-color: var(--rockgrey);
 }
