--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -7,8 +7,28 @@ h1 {
   background: whitesmoke;
   color: var(--rockgrey);
   border-color: var(--ashgrey);
-  width: 50%;
+  width: 70%;
 }
+
+#input_label {
+  display: inline-block;
+}
+
+#country {
+  width: 90%;
+}
+
+#country_block {
+  display: inline-block;
+  width: 40%;
+}
+
+#populated_block {
+  display: inline-block;
+  width: 30%;
+}
+
+
 
 .hero_title {
   font-size: 100px;
